clean up html file

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<title>Pomodoro Timer</title>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link
@@ -9,15 +10,13 @@
 			type="image/png"
 			href="https://github.githubassets.com/favicons/favicon-dark.png"
 		/>
-		<title>Pomodoro Timer</title>
 		<link rel="stylesheet" href="css/reset.css" />
 		<link rel="stylesheet" href="css/base.css" />
 		<link rel="stylesheet" href="css/style.css" />
-		<script type="module" src="src/clockDialLines.mjs"></script>
-		<script type="module" src="src/countDown.mjs"></script>
+		<script type="module" src="src/countdownTimer.mjs"></script>
 	</head>
 	<body>
-		<div class="container">
+		<div class="app-container">
 			<div class="clock">
 				<div class="countdown">00:00</div>
 				<div class="dial-lines">
