--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" href="css/reset.css" />
 		<link rel="stylesheet" href="css/base.css" />
 		<link rel="stylesheet" href="css/style.css" />
-		<script type="module" src="src/countdownTimer.mjs"></script>
+		<script type="module" src="src/index.js"></script>
 	</head>
 	<body>
 		<div class="app-container">
