move css styles into appropriate files

--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 			type="image/png"
 			href="https://github.githubassets.com/favicons/favicon-dark.png"
 		/>
-		<link rel="stylesheet" href="css/reset.css" />
-		<link rel="stylesheet" href="css/base.css" />
-		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="css/index.css" />
 		<script type="module" src="src/index.js"></script>
 	</head>
 	<body>
