add drawer actions and arrow pull button

--- a/index.html
+++ b/index.html
@@ -12,18 +12,6 @@
 		/>
 		<link rel="stylesheet" href="css/index.css" />
 		<script type="module" src="src/index.js"></script>
-		<style>
-			.sr-only {
-				position: absolute;
-				width: 1px;
-				height: 1px;
-				margin: -1px;
-				padding: 0;
-				overflow: hidden;
-				clip: rect(0, 0, 0, 0);
-				border: 0;
-			}
-		</style>
 	</head>
 	<body>
 		<div class="app-container">
@@ -45,7 +33,11 @@
 				<p class="subText">Focus Time</p>
 			</div>
 
-			<div class="drawer-container justify-self-end">
+			<div class="drawer-container" data-is-open="false">
+				<span class="drawer-container-btn">
+					<span class="arrow arrow-1"></span>
+					<span class="arrow arrow-2"></span>
+				</span>
 				<button id="playPauseButton" class="action">Play ▶️</button>
 
 				<button id="resetButton" class="action">Reset 🔄</button>
@@ -53,48 +45,48 @@
 				<label for="forcusTimeSelect"
 					>Focus Time
 					<select id="focusTimeSelect" class="action" name="focus">
-						<option>10</option>
-						<option>20</option>
-						<option>30</option>
-						<option>40</option>
-						<option>50</option>
-						<option>60</option>
+						<option value="60">60</option>
+						<option value="50" selected>50</option>
+						<option value="45">45</option>
+						<option value="30">30</option>
+						<option value="25">25</option>
+						<option value="15">15</option>
 					</select>
 				</label>
 
 				<label for="theme"
 					>Theme
 					<select id="theme" class="action themeSelect" name="theme">
-						<option>Off</option>
-						<option>All</option>
-						<option>White</option>
-						<option>Red</option>
-						<option>Orange</option>
-						<option>Yellow</option>
-						<option>Green</option>
-						<option>Teal</option>
-						<option>Blue</option>
-						<option>Purple</option>
-						<option>Magenta</option>
+						<option value="OFF">Off</option>
+						<option value="ALL" selected>All</option>
+						<option value="WHITE">White</option>
+						<option value="RED">Red</option>
+						<option value="ORANGE">Orange</option>
+						<option value="YELLOW">Yellow</option>
+						<option value="GREEN">Green</option>
+						<option value="TEAL">Teal</option>
+						<option value="BLUE">Blue</option>
+						<option value="PURPLE">Purple</option>
+						<option value="MAGENTA">Magenta</option>
 					</select>
 				</label>
 
 				<label for="breakTimeSelect"
 					>Break Time
 					<select id="breakTimeSelect" class="action" name="break">
-						<option>5</option>
-						<option>10</option>
-						<option>15</option>
+						<option value="15">15</option>
+						<option value="10" selected>10</option>
+						<option value="5">5</option>
 					</select>
 				</label>
 
 				<label for="sessionsSelect"
 					>Sessions
 					<select id="sessionsSelect" class="action" name="sessions">
-						<option value="1">1</option>
-						<option value="2">2</option>
-						<option value="3">3</option>
 						<option value="4">4</option>
+						<option value="3" selected>3</option>
+						<option value="2">2</option>
+						<option value="1">1</option>
 					</select>
 				</label>
 			</div>
