complete phase two

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 
 				<button id="resetButton" class="action">Reset 🔄</button>
 
-				<label for="forcusTimeSelect"
+				<label for="forcusSelect"
 					>Focus Time
-					<select id="focusTimeSelect" class="action" name="focus">
+					<select id="focusSelect" class="action" name="focus">
 						<option value="60">60</option>
-						<option value="50" selected>50</option>
+						<option value="50">50</option>
 						<option value="45">45</option>
 						<option value="30">30</option>
 						<option value="25">25</option>
@@ -54,11 +54,11 @@
 					</select>
 				</label>
 
-				<label for="theme"
+				<label for="themeSelect"
 					>Theme
-					<select id="theme" class="action themeSelect" name="theme">
+					<select id="themeSelect" class="action" name="theme">
 						<option value="OFF">Off</option>
-						<option value="ALL" selected>All</option>
+						<option value="ALL">All</option>
 						<option value="WHITE">White</option>
 						<option value="RED">Red</option>
 						<option value="ORANGE">Orange</option>
@@ -71,11 +71,11 @@
 					</select>
 				</label>
 
-				<label for="breakTimeSelect"
+				<label for="breakSelect"
 					>Break Time
-					<select id="breakTimeSelect" class="action" name="break">
+					<select id="breakSelect" class="action" name="break">
 						<option value="15">15</option>
-						<option value="10" selected>10</option>
+						<option value="10">10</option>
 						<option value="5">5</option>
 					</select>
 				</label>
@@ -84,7 +84,7 @@
 					>Sessions
 					<select id="sessionsSelect" class="action" name="sessions">
 						<option value="4">4</option>
-						<option value="3" selected>3</option>
+						<option value="3">3</option>
 						<option value="2">2</option>
 						<option value="1">1</option>
 					</select>
